--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".DonationsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".VehicleActivity"
+            android:exported="true" />
+        <activity
             android:name=".AddSpareActivity"
             android:exported="true" />
         <activity
