--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".VehicleDetailedView"
+            android:exported="true" />
+        <activity
             android:name=".VehicleListActivity"
             android:exported="true" />
         <activity
